--- a/Metropol-BACKEND/package.json
+++ b/Metropol-BACKEND/package.json
@@ -4,6 +4,7 @@
   "description": "metropol's backend server",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,10 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "prisma": "^6.12.0"
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.1.0",
+    "prisma": "^6.12.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
