--- a/Metropol-BACKEND/package.json
+++ b/Metropol-BACKEND/package.json
@@ -2,7 +2,7 @@
   "name": "metropol-backend",
   "version": "1.0.0",
   "description": "metropol's backend server",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.12.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
