--- a/Metropol-BACKEND/package.json
+++ b/Metropol-BACKEND/package.json
@@ -11,13 +11,20 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
+    "@types/passport-jwt": "^4.0.1",
     "prisma": "^6.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
