--- a/Metropol-BACKEND/package.json
+++ b/Metropol-BACKEND/package.json
@@ -4,8 +4,12 @@
   "description": "metropol's backend server",
   "main": "app.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx --watch src/app.ts",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:migrate": "npx prisma migrate dev",
+    "dev:docker": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up --build -d",
+    "dev:docker:down": "docker compose -f docker-compose.yml -f docker-compose.dev.yml down"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +31,7 @@
     "@types/passport-jwt": "^4.0.1",
     "prisma": "^6.12.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.5",
     "typescript": "^5.8.3"
   }
 }
